--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,4 +5,8 @@
   font-weight: 400;
   font-style: normal;
   font-size: variables.$fontSize;
+
+  @each $space, $value in variables.$spacing {
+    --spacing-#{$space}: #{$value};
+  }
 }
