--- a/projects/vcu-theme-switcher/src/lib/vcu-theme-switcher.component.html
+++ b/projects/vcu-theme-switcher/src/lib/vcu-theme-switcher.component.html
@@ -1,1 +1,3 @@
-switcher
+<button lib-vcu-button severity="danger" type="button">
+  <svg-icon src="svg/sun.svg" [svgStyle]="{ 'width': '20px' }"></svg-icon>
+</button>
