--- a/src/styles/core/_variables.scss
+++ b/src/styles/core/_variables.scss
@@ -1,4 +1,13 @@
 $fontSize: 14px;
+
 $spacing: (
   sm: 10px,
+);
+
+$color: (
+  neutral: #878787,
+  info: #d3d3d3,
+  warning: #5e5e5e,
+  success: #363636,
+  danger: #ff7675,
 );
