--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,11 +15,7 @@
   }
 }
 
-.severiry--danger {
-  color: var(--color-danger);
-}
-
-.severiry {
+.severity {
 
   &--neutral {
     border: 1px solid var(--color-neutral);
