--- a/projects/vcu-theme-switcher/src/lib/vcu-theme-switcher.component.html
+++ b/projects/vcu-theme-switcher/src/lib/vcu-theme-switcher.component.html
@@ -1,3 +1,3 @@
-<button lib-vcu-button severity="danger" type="button">
+<button lib-vcu-button severity="warning" type="button">
   <svg-icon src="svg/sun.svg" [svgStyle]="{ 'width': '20px' }"></svg-icon>
 </button>
