--- a/src/styles/core/_variables.scss
+++ b/src/styles/core/_variables.scss
@@ -1,13 +1,16 @@
 $fontSize: 14px;
+$borderRadius: 8px;
 
 $spacing: (
   sm: 10px,
 );
 
 $color: (
-  neutral: #878787,
-  info: #d3d3d3,
-  warning: #5e5e5e,
-  success: #363636,
-  danger: #ff7675,
+  soft-gray: #F5F5F5,
+  charcoal-black:  #222222,
+  neutral: #6B7280,
+  info: #3B82F6,
+  warning: #F59E0B,
+  success: #34D399,
+  danger: #EF4444,
 );
