style(button): styling button sizes

--- a/projects/vcu-theme-switcher/src/lib/vcu-theme-switcher.component.html
+++ b/projects/vcu-theme-switcher/src/lib/vcu-theme-switcher.component.html
@@ -1,3 +1,7 @@
 <button lib-vcu-button severity="warning" type="button">
-  <svg-icon src="svg/sun.svg" [svgStyle]="{ 'width': '20px' }"></svg-icon>
+  small
+  <!-- <svg-icon src="svg/sun.svg" [svgStyle]="{ 'width': '20px', 'stroke': 'white' }"></svg-icon> -->
 </button>
+
+<button type="button" lib-vcu-button severity="success" size="medium">medium</button>
+<button type="button" lib-vcu-button severity="neutral" size="large">large</button>
