feat(core): add lazy load video directive

--- a/projects/vcu-header/src/lib/vcu-header.component.html
+++ b/projects/vcu-header/src/lib/vcu-header.component.html
@@ -1,4 +1,13 @@
 <div class="vcu-header">
   <lib-vcu-theme-switcher></lib-vcu-theme-switcher>
   Welcome, Stranger!
+
 </div>
+<br>
+<div style="width: 100%; height: 1000px;">
+  long
+</div>
+<video lib-vcu-lazy-load-video width="300" controls>
+
+  <source data-src="https://videos.pexels.com/video-files/12839896/12839896-sd_640_360_25fps.mp4" type="video/mp4">
+</video>
